--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.3.0",
+    "autoprefixer": "^9.8.0",
     "next": "9.4.1",
+    "next-images": "^1.4.0",
+    "postcss-import": "^12.0.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "tailwindcss": "^1.4.6",
+    "tailwindcss-inset": "^1.0.0"
   }
 }
